--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
   </head>
-  <body>
-       <div id="root"></div>
+  <body><center> 
+    <img src = "https://images2.imgbox.com/fc/e0/1nircp6I_o.png" alt ="site logo" 
+   width = 800></center>
+           <div id="root"></div>
   </body>
 </html>
