added fetch request to display all projects on cloud

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
   </head>
   <body><center> 
-    <img src = "https://images2.imgbox.com/fc/e0/1nircp6I_o.png" alt ="site logo" 
+    <img src = "https://images2.imgbox.com/1b/cd/nl6oneCe_o.png" alt ="site logo" 
    width = 800></center>
            <div id="root"></div>
   </body>
